:bug:(client): layout broke somehow

--- a/src/client/app/auth/login/layout.module.scss
+++ b/src/client/app/auth/login/layout.module.scss
@@ -1,6 +1,7 @@
 .container {
   display: flex;
   width: 99vw;
+  height: 99vw;
   align-items: center;
   justify-content: center;
 
