--- a/src/client/app/layout.module.scss
+++ b/src/client/app/layout.module.scss
@@ -5,6 +5,8 @@
 
   .body {
     display: flex;
+    flex-direction: column;
+    margin: 0;
     width: 100%;
     height: 99%;
   }
